styles/style.css
/* ... */
@media (min-width: 900px) {
    .chapter-content__text-container {
        width: 75%;
        flex-direction: column-reverse;
        align-items: flex-end;
    }
}

@media (min-width: 1400px) {
    .chapter-content__text-container {
        flex-direction: row;
        align-items: center;
    }
}

.chapter-content__quote {
    flex: 0 1 auto;
    line-height: 1.34em;
    text-align: right;
    font-size: 1em;
}

@media (min-width: 480px) {
    .chapter-content__quote {
        width: 45%;
    }
}

@media (min-width: 900px) {
    .chapter-content__quote {
        width: auto;
        font-size: 1.25em;
    }
}

@media (min-width: 1400px) {
    .chapter-content__quote {
        width: 40%;
    }
}

.chapter-content__quote blockquote {
    margin: 0;
}

.chapter-content__quote a {
    margin: 0 0.15em;
    color: inherit;
    text-decoration: underline;
}

.chapter-content__title {
    margin: 0;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    font-size: 3.75em;
}

.chapter-content__title--Introduction {
    font-size: 3.375em;
}

@media (min-width: 900px) {
    .chapter-content__title {
        margin-left: 1em;
        font-size: 7em;
    }
}

.chapter-content__title-line {
    white-space: nowrap;
}

/* appendix */
.appendix {
    min-height: 100vh;
    color: #fff;
    background-color: #363636;
}

@media (min-width:900px) {
    .appendix {
        min-height: auto;
        height: 100%;
        overflow-y: auto;
    }
}

.appendix__content-container {
    margin: auto;
    box-sizing: border-box;
    width: 100%;
    max-width: 1048px;
    padding: 16px max(16px, env(safe-area-inset-right)) 16px max(16px, env(safe-area-inset-left));
}

@media (min-width:900px) {
    .appendix__content-container {
        padding: 64px 48px;
    }
}

.appendix__title {
    margin: 0 0 16px;
    font-size: 1.75em;
}

@media (min-width:900px) {
    .appendix__title {
        margin-bottom: 32px;
        font-size: 2em;
    }
}

.appendix__title-chapter {
    margin-right: 32px;
}

.appendix__nav-arrow {
    position: fixed;
    top: 50%;
    margin: 0 16px;
    transform: translateY(-50%);
}

@media (max-width:900px) {
    .appendix__nav-arrow {
        display: none;
    }
}

.appendix__nav-arrow:first-child {
    left: 0;
}

.appendix__nav-arrow:last-child {
    right: 0;
}

.appendix__nav-arrow--hidden {
    visibility: hidden;
}

.appendix__body-text {
    line-height: 1.34;
}

.appendix__body-text a {
    color: #5caac5;
    text-decoration: underline;
}

.appendix__media-viewer {
    margin-bottom: 16px;
}

.media-viewer--fullscreen .appendix__media-container {
    width: 100%;
    height: 100%;
}

.media-viewer--fullscreen .appendix__tree-viewer {
    width: 100%;
    height: 100%;
}

.media-viewer--fullscreen .appendix__svg-container {
    width: 100%;
    height: 100%;
}

.media-viewer--fullscreen .appendix__tree-svg {
    width: 100%;
    height: 100%;
}

.appendix__phylogenetic-list-header {
    margin: 0;
    font-size: 1em;
}

.appendix__phylogenetic-list-toggle-btn {
    margin: 0 0 20px 0;
    width: 100%;
    border: none;
    border-bottom: 1px solid white;
    padding: 8.5px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: none;
    color: inherit;
    font-size: 1em;
}

@media (min-width: 900px) {
    .appendix__phylogenetic-list-toggle-btn {
        margin: 0 0 24px 0;
    }
}

.appendix__phylogenetic-list-title {
    font-size: 1.25em;
    font-weight: 700;
    text-align: left;
}

@media (min-width: 900px) {
    .appendix__phylogenetic-list-title {
        font-size: 1.5em;
    }
}

.appendix__phylogenetic-list-toggle-icon {
    width: 1.25em;
    height: 1.25em;
    fill: #4b889b;;
    transition: transform 1s;
}

.appendix__phylogenetic-list-toggle-btn[aria-expanded="true"] .appendix__phylogenetic-list-toggle-icon {
    transform: rotate(180deg);
}

.appendix__phylogenetic-list-panel {
    height: auto;
    padding-left: 16px;
    overflow: hidden;
    transition: height 1s;
}

.appendix-accordion__entry-panel--collapsed {
    visibility: hidden;
    transition: height 1s, visibility 0s 1s;
}

/* appendix-accordion */
.appendix-accordion {
    color: #fff;
}

@media (max-width:900px) {
    .appendix-accordion__entry-anchor {
        position: absolute;
        margin-top: -56px;
    }
}

.appendix-accordion__header-container {
    margin: 0;
    font-size: 1em;
}

.appendix-accordion__entry-header {
    margin: 0 0 20px 0;
    width: 100%;
    border: none;
    border-bottom: 1px solid white;
    padding: 8.5px 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: none;
    color: inherit;
    font-size: 1em;
}

@media (min-width: 900px) {
    .appendix-accordion__entry-header {
        margin: 0 0 24px 0;
    }
}

.appendix-accordion__entry-title {
    font-size: 1.25em;
    font-weight: 700;
    text-align: left;
}

@media (min-width: 900px) {
    .appendix-accordion__entry-title {
        font-size: 1.5em;
    }
}

.appendix-accordion__entry-title--italicized {
    font-style: italic;
}

.appendix-accordion__entry-toggle-icon {
    width: 1.25em;
    height: 1.25em;
    fill: #4b889b;;
    transition: transform 1s;
}

.appendix-accordion__entry-header[aria-expanded="true"] .appendix-accordion__entry-toggle-icon {
    transform: rotate(180deg);
}

.appendix-accordion__entry-panel {
    height: auto;
    overflow: hidden;
    transition: height 1s;
}

.appendix-accordion__entry-panel--collapsed {
    visibility: hidden;
    transition: height 1s, visibility 0s 1s;
}

/* feature-index-entry */
.feature-index-entry {
    margin: 0;
    padding-left: 16px;
    list-style: none;
}

@media (min-width:900px) {
    .feature-index-entry {
        padding-left: 24px;
    }
}

.feature-index-entry__ref {
    margin-bottom: 16px;
}

.feature-index-entry__ref-name {
    font-style: italic;
}
/* ... */

